src/rules/snapshots/pg_migration_lint__rules__pgm108__tests__add_column_varchar_n_fires.snap
---
source: src/rules/pgm108.rs
expression: findings
---
- rule_id: PGM108
  severity: Info
  message: "Column 'description' on 'users' uses varchar(255). Prefer text — varchar(n) has no performance benefit in PostgreSQL and adds an artificial limit that may require future schema changes."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
