src/rules/snapshots/pg_migration_lint__rules__pgm108__tests__create_table_json_fires.snap
---
source: src/rules/pgm108.rs
assertion_line: 103
expression: findings
---
- rule_id: PGM108
  severity: Minor
  message: "Column 'payload' on 'events' uses 'json'. Use 'jsonb' instead — it's faster, smaller, indexable, and supports containment operators. Only use 'json' if you need to preserve exact text representation or key order."
  file: migrations/001.sql
  start_line: 1
  end_line: 1
